# YaltaChess

./: .gitignore  CMakeLists.txt  CMakePresets.json  Controller.cpp  Doxyfile  HexagonalCubique.h  LICENSE  README.md  Rapport.md  View.cpp  constants.h  cube_labels.txt  explications_P1.md  rapportPage1.md  sfml-app  technoSpringBoot.txt  yalta_chess.puml
main/: CMakeLists.txt  Controller.cpp  Controller.h  Couleur.h  CubeToLabel.cpp  CubeToLabel.h  GameLogger.h  HexagonalCubique.cpp  HexagonalCubique.h  HexagonalCubique_old.h  Intro.cpp  Intro.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  View.cpp  View.h  YaltaCoords.h  main.cpp
main/cases/: Case.cpp  Case.h
main/pieces/: Cavalier.cpp  Cavalier.h  Dame.cpp  Dame.h  Fou.cpp  Fou.h  Piece.cpp  Piece.h  Pion.cpp  Pion.h  Roi.cpp  Roi.h  Tour.cpp  Tour.h
tests/: CMakeLists.txt  coordonnees_cube.txt  testSFML3.cpp
